# fswatcher-rs

./: Cargo.toml  LICENSE.md  README.md
examples/: watch_dir.rs
src/: file_event_delay.rs  inotify.rs  lib.rs
