[package]
name = "fswatcher"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.8"
futures = "0.3.1"
futures-tokio-compat = { git = "https://github.com/mgottschlag/futures-tokio-compat.git" }
tokio = { version = "0.2.10", features = ["rt-core", "stream", "sync", "time"] }

[dev-dependencies]
tokio = { version = "0.2.10", features = ["macros"] }
futures-util = "0.3.1"
